force-app/main/default/objects/Case/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Tipo de Conta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>currentAccount</fullName>
                <label>Conta Corrente</label>
            </value>
            <value>
                <fullName>savingsAccount</fullName>
                <label>Conta Poupança</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>