force-app/main/default/objects/Case/fields/AlgumObjetoPostado__c.field-meta.xml
<CustomField>
    <fullName>AlgumObjetoPostado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que determina se houve alguma postagem de objeto, a partir do momento em que se identifica um Número de Etiqueta em algum dos filhos &quot;Objeto Postagem Reversa&quot;</description>
    <label>Algum objeto foi postado na reversa?</label>
    <type>Checkbox</type>
</CustomField>