force-app/main/default/objects/Case/fields/Banco__c.field-meta.xml
<CustomField>
    <fullName>Banco__c</fullName>
    <label>Banco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>