force-app/main/default/objects/Case/fields/Bank__c.field-meta.xml
<CustomField>
    <fullName>Bank__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nome do banco para a realização do estorno.</description>
    <inlineHelpText>Nome do banco para a realização do estorno.</inlineHelpText>
    <label>Nome do Banco</label>
    <referenceTo>Bank__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>CaseBank</relationshipName>
    <type>Lookup</type>
</CustomField>