force-app/main/default/objects/Case/fields/BankCode__c.field-meta.xml
<CustomField>
    <fullName>BankCode__c</fullName>
    <formula>Bank__r.BankCode__c</formula>
    <label>Código de Banco</label>
    <type>Text</type>
</CustomField>