force-app/main/default/objects/Case/fields/CaCnpjDistribuidor__c.field-meta.xml
<CustomField>
    <fullName>CaCnpjDistribuidor__c</fullName>
    <description>Campo usado na integração de casos com a Compra Agora.</description>
    <label>CNPJ do Distribuidor</label>
    <length>20</length>
    <type>Text</type>
</CustomField>