force-app/main/default/objects/Case/fields/CAEmpresa__c.field-meta.xml
<CustomField>
    <fullName>CAEmpresa__c</fullName>
    <label>Empresa Compra Agora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>