force-app/main/default/objects/Case/fields/CaFila__c.field-meta.xml
<CustomField>
    <fullName>CaFila__c</fullName>
    <description>Campo usado na integração de casos com a Compra Agora.</description>
    <label>Fila</label>
    <length>100</length>
    <type>Text</type>
</CustomField>