force-app/main/default/objects/Case/fields/CAMotivo__c.field-meta.xml
<CustomField>
    <fullName>CAMotivo__c</fullName>
    <label>Motivo Compra Agora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>