force-app/main/default/objects/Case/fields/CaNomeDistribuidor__c.field-meta.xml
<CustomField>
    <fullName>CaNomeDistribuidor__c</fullName>
    <description>Campo usado na integração de casos com a Compra Agora.</description>
    <label>Nome do Distribuidor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>