force-app/main/default/objects/Case/fields/CaNumeroDocumento__c.field-meta.xml
<CustomField>
    <fullName>CaNumeroDocumento__c</fullName>
    <description>Campo usado na integração de casos com a Compra Agora.</description>
    <label>Número do Documento</label>
    <length>20</length>
    <type>Text</type>
</CustomField>