force-app/main/default/objects/Case/fields/CaNumeroPedido__c.field-meta.xml
<CustomField>
    <fullName>CaNumeroPedido__c</fullName>
    <description>Campo usado na integração de casos com a Compra Agora.</description>
    <label>Número do Pedido</label>
    <length>20</length>
    <type>Text</type>
</CustomField>