force-app/main/default/objects/Case/fields/Caso_Troque_Facil__c.field-meta.xml
<CustomField>
    <fullName>Caso_Troque_Facil__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Caso Troque Fácil</label>
    <referenceTo>Caso_Troque_Facil__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>