force-app/main/default/objects/Case/fields/CASubcategoria__c.field-meta.xml
<CustomField>
    <fullName>CASubcategoria__c</fullName>
    <label>Subcategoria Compra Agora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>