force-app/main/default/objects/Case/fields/CASubMotivo__c.field-meta.xml
<CustomField>
    <fullName>CASubMotivo__c</fullName>
    <label>Sub-Motivo Compra Agora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>