force-app/main/default/objects/Case/fields/CodigoMarca__c.field-meta.xml
<CustomField>
    <fullName>CodigoMarca__c</fullName>
    <label>Código da Marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>