force-app/main/default/objects/Case/fields/Customer_Document__c.field-meta.xml
<CustomField>
    <fullName>Customer_Document__c</fullName>
    <label>Documento do Cliente</label>
    <length>18</length>
    <type>Text</type>
</CustomField>