force-app/main/default/objects/Case/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName>
    <label>Email do Cliente</label>
    <type>Email</type>
</CustomField>