force-app/main/default/objects/Case/fields/Customer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Last_Name__c</fullName>
    <label>Sobrenome do Cliente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>