force-app/main/default/objects/Case/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName>
    <label>Telefone do Cliente</label>
    <type>Phone</type>
</CustomField>