force-app/main/default/objects/Case/fields/DescricaoProduto__c.field-meta.xml
<CustomField>
    <fullName>DescricaoProduto__c</fullName>
    <label>Descrição Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>