force-app/main/default/objects/Case/fields/Destination_Name__c.field-meta.xml
<CustomField>
    <fullName>Destination_Name__c</fullName>
    <label>Nome do Destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>