force-app/main/default/objects/Case/fields/Destination_return_to_seller__c.field-meta.xml
<CustomField>
    <fullName>Destination_return_to_seller__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retornou para loja</label>
    <type>Checkbox</type>
</CustomField>