force-app/main/default/objects/Case/fields/Destination_seller_id__c.field-meta.xml
<CustomField>
    <fullName>Destination_seller_id__c</fullName>
    <label>Id Loja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>