force-app/main/default/objects/Case/fields/Destination_seller_info__c.field-meta.xml
<CustomField>
    <fullName>Destination_seller_info__c</fullName>
    <label>Informação da Loja</label>
    <length>255</length>
    <type>Text</type>
</CustomField>