force-app/main/default/objects/Case/fields/Destination_Type__c.field-meta.xml
<CustomField>
    <fullName>Destination_Type__c</fullName>
    <label>Tipo de Destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>