force-app/main/default/objects/Case/fields/DigitoAgencia__c.field-meta.xml
<CustomField>
    <fullName>DigitoAgencia__c</fullName>
    <label>Dígito Agência</label>
    <length>50</length>
    <type>Text</type>
</CustomField>