force-app/main/default/objects/Case/fields/DigitoConta__c.field-meta.xml
<CustomField>
    <fullName>DigitoConta__c</fullName>
    <label>Dígito Conta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>