force-app/main/default/objects/Case/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <description>CPF ou CNPJ do titular da conta para reembolso e/ou estorno.</description>
    <inlineHelpText>Informe o número do CPF ou CNPJ do titular da conta para reembolso e/ou estorno.</inlineHelpText>
    <label>Documento</label>
    <length>18</length>
    <type>Text</type>
</CustomField>