force-app/main/default/objects/Case/fields/DocumentType__c.field-meta.xml
<CustomField>
    <fullName>DocumentType__c</fullName>
    <description>Tipo de documento da conta para reembolso. CPF ou CNPJ.</description>
    <inlineHelpText>Tipo de documento da conta para reembolso. CPF ou CNPJ.</inlineHelpText>
    <label>Tipo de Documento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>cpf</fullName>
                <label>Cpf</label>
            </value>
            <value>
                <fullName>cnpj</fullName>
                <label>Cnpj</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>