force-app/main/default/objects/Case/fields/EANProduto__c.field-meta.xml
<CustomField>
    <fullName>EANProduto__c</fullName>
    <label>EAN Produto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>