force-app/main/default/objects/Case/fields/Ecommerce_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Ecommerce_Order_Id__c</fullName>
    <label>Id do Pedido Ecommerce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>