force-app/main/default/objects/Case/fields/EstornoAutomatico__c.field-meta.xml
<CustomField>
    <fullName>EstornoAutomatico__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de controle para disparo do Estorno Automático.</description>
    <label>Estorno Automático ?</label>
    <type>Checkbox</type>
</CustomField>