force-app/main/default/objects/Case/fields/ExternalCaseId__c.field-meta.xml
<CustomField>
    <fullName>ExternalCaseId__c</fullName>
    <externalId>true</externalId>
    <label>Número Externo de Caso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>