force-app/main/default/objects/Case/fields/Id_Reverse__c.field-meta.xml
<CustomField>
    <fullName>Id_Reverse__c</fullName>
    <label>Id Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>