force-app/main/default/objects/Case/fields/IdClientePostagemReversa__c.field-meta.xml
<CustomField>
    <fullName>IdClientePostagemReversa__c</fullName>
    <label>Id Cliente Postagem Reversa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>