force-app/main/default/objects/Case/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <label>Nota Fiscal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>