force-app/main/default/objects/Case/fields/Marca__c.field-meta.xml
<CustomField>
    <fullName>Marca__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Marca relacionada ao caso.</description>
    <label>Marca</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>MarcaCasos</relationshipName>
    <type>Lookup</type>
</CustomField>