force-app/main/default/objects/Case/fields/Marca_Instant__c.field-meta.xml
<CustomField>
    <fullName>Marca_Instant__c</fullName>
    <label>Marca Instant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>