force-app/main/default/objects/Case/fields/NewOrder__c.field-meta.xml
<CustomField>
    <fullName>NewOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Pedido Novo, preenchido em Casos de Troca.</description>
    <inlineHelpText>Informar o número do novo Pedido.</inlineHelpText>
    <label>Pedido Novo</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Casos (Novo Pedido)</relationshipLabel>
    <relationshipName>NewOrderCase</relationshipName>
    <type>Lookup</type>
</CustomField>