force-app/main/default/objects/Case/fields/NomeMarca__c.field-meta.xml
<CustomField>
    <fullName>NomeMarca__c</fullName>
    <description>Nome da Marca que será utilizada para usar na regra de compartilhamento. Será atualizado por flow. Não estará no Layout.</description>
    <label>Nome da Marca</label>
    <length>255</length>
    <type>Text</type>
</CustomField>