force-app/main/default/objects/Case/fields/NumeroColeta__c.field-meta.xml
<CustomField>
    <fullName>NumeroColeta__c</fullName>
    <label>Número do E-Ticket</label>
    <length>50</length>
    <type>Text</type>
</CustomField>