force-app/main/default/objects/Case/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Relacionamento com o Pedido do Cliente.</description>
    <label>Pedido</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Order.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Casos (Pedido)</relationshipLabel>
    <relationshipName>OrderCase</relationshipName>
    <type>Lookup</type>
</CustomField>