force-app/main/default/objects/Case/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <label>Id do Pedido</label>
    <length>255</length>
    <type>Text</type>
</CustomField>