force-app/main/default/objects/Case/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <label>Origem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>