force-app/main/default/objects/Case/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <description>Forma de Pagamento do Pedido de Troque Fácil.</description>
    <label>Forma de Pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>