force-app/main/default/objects/Case/fields/ProtocolType__c.field-meta.xml
<CustomField>
    <fullName>ProtocolType__c</fullName>
    <description>Tipo de protocolo enviado para o iHub na Api de Protocol.
Tipos  exchange or return.</description>
    <label>Tipo de  Protocolo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NoProtocoliHub</fullName>
                <default>true</default>
                <label>Sem Protocolo Troca/Devolução</label>
            </value>
            <value>
                <fullName>return</fullName>
                <label>Devolução</label>
            </value>
            <value>
                <fullName>exchange</fullName>
                <label>Troca</label>
            </value>
            <value>
                <fullName>Ruptura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>