force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Motivo do Caso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Status do pagamento</fullName>
            </value>
            <value>
                <fullName>Status da entrega-CD</fullName>
            </value>
            <value>
                <fullName>Status da entrega-Transporte</fullName>
            </value>
            <value>
                <fullName>Cliente atesta não conformidade</fullName>
            </value>
            <value>
                <fullName>Cliente não gostou do produto</fullName>
            </value>
            <value>
                <fullName>Status reversa</fullName>
            </value>
            <value>
                <fullName>Conta</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
            <value>
                <fullName>Produto</fullName>
            </value>
            <value>
                <fullName>Equipe</fullName>
            </value>
            <value>
                <fullName>Localização</fullName>
            </value>
            <value>
                <fullName>Promoções</fullName>
            </value>
            <value>
                <fullName>Parceria</fullName>
            </value>
            <value>
                <fullName>Dúvidas Loja Física</fullName>
            </value>
            <value>
                <fullName>Assistência Técnica</fullName>
            </value>
            <value>
                <fullName>Institucional Marca</fullName>
            </value>
            <value>
                <fullName>SAC Infra</fullName>
            </value>
            <value>
                <fullName>SAC Terceiro</fullName>
            </value>
            <value>
                <fullName>Atendimento Loja Física</fullName>
            </value>
            <value>
                <fullName>Atendimento Distribuidor</fullName>
            </value>
            <value>
                <fullName>Atendimento NRP</fullName>
            </value>
            <value>
                <fullName>Elogio do produto</fullName>
            </value>
            <value>
                <fullName>Elogio da marca</fullName>
            </value>
            <value>
                <fullName>Elogio atendimento</fullName>
            </value>
            <value>
                <fullName>Elogio do Site</fullName>
            </value>
            <value>
                <fullName>Elogio da Logística</fullName>
            </value>
            <value>
                <fullName>Elogio de Transporte</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Telefone</fullName>
            </value>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>