force-app/main/default/objects/Case/fields/ReassignCase__c.field-meta.xml
<CustomField>
    <fullName>ReassignCase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que define se o caso será reatribuido.</description>
    <label>ReatribuirCaso</label>
    <type>Checkbox</type>
</CustomField>