force-app/main/default/objects/Case/fields/RefundId__c.field-meta.xml
<CustomField>
    <fullName>RefundId__c</fullName>
    <label>Id do Estorno Automático</label>
    <length>255</length>
    <type>Text</type>
</CustomField>