force-app/main/default/objects/Case/fields/ResolutionPerformed__c.field-meta.xml
<CustomField>
    <fullName>ResolutionPerformed__c</fullName>
    <description>Campo que informa a tratativa realizada no caso.</description>
    <inlineHelpText>Informar a tratativa realizada no caso.</inlineHelpText>
    <label>Tratativa realizada</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>