force-app/main/default/objects/Case/fields/ReversaStatus__c.field-meta.xml
<CustomField>
    <fullName>ReversaStatus__c</fullName>
    <description>Rastreia o processo de Reversa dos Correios através dos Status.</description>
    <label>Status da Reversa</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aguardando Objeto na Agência</fullName>
                <label>Aguardando Postagem Consumidor</label>
            </value>
            <value>
                <fullName>Prazo de Utilização Expirado</fullName>
                <label>Prazo de Postagem Expirado</label>
            </value>
            <value>
                <fullName>Coletado</fullName>
                <label>Em rota para o CD</label>
            </value>
            <value>
                <fullName>Entrega não realizada</fullName>
            </value>
            <value>
                <fullName>Aguardando Check-in Reversa</fullName>
            </value>
            <value>
                <fullName>Reversa Liberada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>