force-app/main/default/objects/Case/fields/Reverse_Type__c.field-meta.xml
<CustomField>
    <fullName>Reverse_Type__c</fullName>
    <label>Tipo de Reversa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>