force-app/main/default/objects/Case/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Assinatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>