force-app/main/default/objects/Case/fields/status_id__c.field-meta.xml
<CustomField>
    <fullName>status_id__c</fullName>
    <label>Id do Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>