force-app/main/default/objects/Case/fields/SubReason__c.field-meta.xml
<CustomField>
    <fullName>SubReason__c</fullName>
    <description>Sub-Motivo do Caso, utilizado para fins de classificação.</description>
    <label>Sub-Motivo do caso</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pedido não aprovado</fullName>
            </value>
            <value>
                <fullName>Pedido cancelado parcial</fullName>
            </value>
            <value>
                <fullName>Pedido cancelado total</fullName>
            </value>
            <value>
                <fullName>Pedido não integrado</fullName>
            </value>
            <value>
                <fullName>Boleto não enviado</fullName>
            </value>
            <value>
                <fullName>Boleto não faturado</fullName>
            </value>
            <value>
                <fullName>Anti-fraude</fullName>
            </value>
            <value>
                <fullName>Segunda via de boleto</fullName>
            </value>
            <value>
                <fullName>Prorrogação de boleto</fullName>
            </value>
            <value>
                <fullName>Envio segunda via de nota fiscal</fullName>
            </value>
            <value>
                <fullName>Alteração de endereço</fullName>
            </value>
            <value>
                <fullName>Aguardando separação</fullName>
            </value>
            <value>
                <fullName>Aguardando faturamento</fullName>
            </value>
            <value>
                <fullName>Aguardando expedição</fullName>
            </value>
            <value>
                <fullName>Aguardando personalização</fullName>
            </value>
            <value>
                <fullName>Aguardando despacho</fullName>
            </value>
            <value>
                <fullName>Em rota dentro do prazo</fullName>
            </value>
            <value>
                <fullName>Tracking desatualizado</fullName>
            </value>
            <value>
                <fullName>Endereço insuficiente</fullName>
            </value>
            <value>
                <fullName>Endereço errado</fullName>
            </value>
            <value>
                <fullName>CEP não atendido</fullName>
            </value>
            <value>
                <fullName>Tentativa de entrega sem sucesso</fullName>
            </value>
            <value>
                <fullName>Não reconhece a entrega</fullName>
            </value>
            <value>
                <fullName>Extravio</fullName>
            </value>
            <value>
                <fullName>Retido na fiscalização</fullName>
            </value>
            <value>
                <fullName>Prazo de entrega alterado</fullName>
            </value>
            <value>
                <fullName>Em rota prazo expirado</fullName>
            </value>
            <value>
                <fullName>Tamanho grande</fullName>
            </value>
            <value>
                <fullName>Tamanho pequeno</fullName>
            </value>
            <value>
                <fullName>Não modelou bem no corpo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>