force-app/main/default/objects/Case/fields/TaskFinished__c.field-meta.xml
<CustomField>
    <fullName>TaskFinished__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo de controle para finalização do marco.</description>
    <label>Tarefa Concluída ?</label>
    <type>Checkbox</type>
</CustomField>