force-app/main/default/objects/Case/fields/TaskQueueName__c.field-meta.xml
<CustomField>
    <fullName>TaskQueueName__c</fullName>
    <defaultValue>&quot;Atendimento N1&quot;</defaultValue>
    <label>Nome da Fila</label>
    <length>255</length>
    <type>Text</type>
</CustomField>