force-app/main/default/objects/Case/fields/Tipo_Personalizado_Tabulacao__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Personalizado_Tabulacao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tipo Personalizado Tabulação</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Marca__c</field>
            <operation>equals</operation>
            <valueField>TabulacaoCaso__c.Marca__c</valueField>
        </filterItems>
        <filterItems>
            <field>TabulacaoCaso__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Tipo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TabulacaoCaso__c</referenceTo>
    <relationshipLabel>Casos</relationshipLabel>
    <relationshipName>Casos</relationshipName>
    <type>Lookup</type>
</CustomField>