force-app/main/default/objects/Case/fields/TipoMarca__c.field-meta.xml
<CustomField>
    <fullName>TipoMarca__c</fullName>
    <label>Tipo de Marca</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Tipos_de_Marcas</valueSetName>
    </valueSet>
</CustomField>