force-app/main/default/objects/Case/fields/TipoSLA__c.field-meta.xml
<CustomField>
    <fullName>TipoSLA__c</fullName>
    <label>Tipo do SLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>N1</fullName>
            </value>
            <value>
                <fullName>N2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>