force-app/main/default/objects/Case/fields/TitularConta__c.field-meta.xml
<CustomField>
    <fullName>TitularConta__c</fullName>
    <inlineHelpText>Informar o nome do titular da conta.</inlineHelpText>
    <label>Titular da Conta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>