force-app/main/default/objects/Case/fields/Tracking_Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Authorization_Code__c</fullName>
    <label>Código de Autorização de Rastreio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>