force-app/main/default/objects/Case/fields/Tracking_Code__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Code__c</fullName>
    <label>Código de Rastreio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>