force-app/main/default/objects/Case/fields/Tracking_Ecommerce_Order__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Ecommerce_Order__c</fullName>
    <label>Número Pedido Ecommerce</label>
    <length>255</length>
    <type>Text</type>
</CustomField>