force-app/main/default/objects/Case/fields/Tracking_Expire_Date__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Expire_Date__c</fullName>
    <label>Data de Expiração Rastreio</label>
    <type>DateTime</type>
</CustomField>