force-app/main/default/objects/Case/fields/Tracking_Status__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Status__c</fullName>
    <label>Status do Rastreio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>