force-app/main/default/objects/Case/recordTypes/Compre_Agora.recordType-meta.xml
<RecordType>
    <fullName>Compre_Agora</fullName>
    <active>true</active>
    <businessProcess>Caso de Atendimento</businessProcess>
    <label>Compre Agora</label>
</RecordType>