force-app/main/default/objects/Case/recordTypes/NewRecord.recordType-meta.xml
<RecordType>
    <fullName>NewRecord</fullName>
    <active>true</active>
    <businessProcess>Caso de Atendimento</businessProcess>
    <label>Novo Registro</label>
</RecordType>