force-app/main/default/objects/Case/recordTypes/ServiceCase.recordType-meta.xml
<RecordType>
    <fullName>ServiceCase</fullName>
    <active>true</active>
    <businessProcess>Caso de Atendimento</businessProcess>
    <label>Caso de Atendimento</label>
</RecordType>