force-app/main/default/objects/Case/recordTypes/Troque_Facil.recordType-meta.xml
<RecordType>
    <fullName>Troque_Facil</fullName>
    <active>true</active>
    <businessProcess>Caso de Troca</businessProcess>
    <label>Troque Fácil</label>
</RecordType>