force-app/main/default/objects/Case/validationRules/CamposTabulacaoPersonalizada.validationRule-meta.xml
<ValidationRule>
    <fullName>CamposTabulacaoPersonalizada</fullName>
    <active>true</active>
    <errorConditionFormula>If (AND ( Marca__r.Tabulacao_Personalizada__c = true,OR( Isblank(Tipo_Personalizado_Tabulacao__c), Isblank(Motivo_do_Caso_Personalizado_Tabulacao__c), Isblank(Sub_Motivo_Personalizado_Tabulacao__c))), true, false)</errorConditionFormula>
    <errorMessage>Os campos de Tabulação Personalizada precisam ser preenchidos</errorMessage>
</ValidationRule>