force-app/main/default/objects/Case/validationRules/ImpedeEdicaoAssuntoDescricaoCaso.validationRule-meta.xml
<ValidationRule>
    <fullName>ImpedeEdicaoAssuntoDescricaoCaso</fullName>
    <active>true</active>
    <description>Validação que impede o Perfil Atendente de editar o campo Assunto e Descrição após o cadastro.</description>
    <errorConditionFormula>AND(
  $Profile.Name = &quot;Atendente&quot;,
  NOT(ISNEW()),
  OR (ISCHANGED( Subject ),ISCHANGED(  Description ) )
)</errorConditionFormula>
    <errorMessage>Os campos Assunto e Descrição não podem ser editados após o cadastro do caso.</errorMessage>
</ValidationRule>